--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ p {
 h1 {
     font-size: 150px;
     color: azure;
-    padding-left: 60px;
+    text-align: center;
 }
 
 p2 {
@@ -71,5 +71,16 @@ p1 {
     float: right;
     padding-right: 50px;
 
+}
+
+button {
+    color: black;
+    margin-left: 50px;
+    
+
+}
+
+#img1 {
+    width: 300px;
 }
 
