--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,9 @@ h1 {
 
 p2 {
     color: azure;
-    font-size: 50px;
     padding-left: 70px;
+    font-size: 50px;
+    font-size: 4vw;
 
 }
 
@@ -61,6 +62,7 @@ p1 {
 .header-img {
     padding-left: 60px;
     padding-top: 40px;
+    padding-right: 60px;
 }
 
 .select-row {
@@ -74,9 +76,9 @@ p1 {
 }
 
 button {
-   
     border-color: azure;
     color: black;   
+    float: left;
 
 }
 
@@ -98,4 +100,10 @@ h4 {
     color: azure;
     margin-right: 10px;
 
+}
+
+h5 {
+    float: left;
+    color: azure;
+    font-size: 20px;
 }
